<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context="fr.nevechris.scheduleplanner.activity.MainActivity">

    <!--<android.support.design.widget.CoordinatorLayout-->
        <!--android:id="@+id/chrisneve"-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--tools:context="fr.nevechris.scheduleplanner.activity.MainActivity">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/chrisneve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/createExam_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
                <Button
                    android:id="@+id/createExam_Save_Button"
                    android:background="@color/caldroid_transparent"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Create" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

    <!--</android.support.design.widget.CoordinatorLayout>-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/chrisneve">

                <LinearLayout
                    android:id="@+id/createExam_Title_Layout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:id="@+id/createExam_Title_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Title"
                            android:inputType="textCapWords"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:id="@+id/createExam_Description_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/exam_description"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:id="@+id/createExam_Subject_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/exam_subject"
                            android:inputType="textCapWords"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:id="@+id/createExam_Date_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:hint="Date"
                            android:inputType="date"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:id="@+id/createExam_TeacherName_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/exam_teacher_name"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:id="@+id/createExam_Difficulty_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/exam_difficulty"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:id="@+id/createExam_Place_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/exam_place"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:id="@+id/createExam_Notes_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/exam_notes"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:id="@+id/createExam_Grade_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/exam_grade"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
        </ScrollView>


        <!--<RelativeLayout android:layout_height="wrap_content"-->
            <!--android:layout_width="match_parent">-->
            <!--<ListView android:layout_height="match_parent"-->
                <!--android:layout_width="match_parent">-->

            <!--</ListView>-->
        <!--</RelativeLayout>-->

    </RelativeLayout>
    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="161dp"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->



</android.support.v4.widget.DrawerLayout>
