<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context="fr.nevechris.scheduleplannerold.MainActivityold">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fr.nevechris.scheduleplannerold.MainActivityold">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/layout_no_exam"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="No exam for this day. Enjoy your time off!"
                    android:textStyle="italic"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_exam"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_height="80dp"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/examTitleForDate"
                    android:gravity="center"
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/form_title_size"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteY="100dp"
                    tools:layout_editor_absoluteX="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/descriptionLayout"
                android:layout_below="@id/titleLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:layout_editor_absoluteY="25dp"
                tools:layout_editor_absoluteX="8dp">
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="wrap_content"
                    android:text="@string/exam_description"
                    android:textSize="@dimen/form_text_size"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/examDescription"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/form_text_size"
                    tools:layout_editor_absoluteY="25dp"
                    tools:layout_editor_absoluteX="0dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/subjectLayout"
                android:layout_below="@id/descriptionLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:layout_editor_absoluteY="25dp"
                tools:layout_editor_absoluteX="8dp">
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="wrap_content"
                    android:text="@string/exam_subject"
                    android:textSize="@dimen/form_text_size"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/examSubject"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/form_text_size"
                    tools:layout_editor_absoluteY="25dp"
                    tools:layout_editor_absoluteX="0dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/teacherNameLayout"
                android:layout_below="@id/subjectLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="wrap_content"
                    android:text="@string/exam_teacher_name"
                    android:textSize="@dimen/form_text_size"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/teacherName"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/form_text_size" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/placeLayout"
                android:layout_below="@id/teacherNameLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="wrap_content"
                    android:text="@string/exam_place"
                    android:textSize="@dimen/form_text_size"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/placeTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/form_text_size" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/difficultyLayout"
                android:layout_below="@id/placeLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="wrap_content"
                    android:text="@string/exam_difficulty"
                    android:textSize="@dimen/form_text_size"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/difficultyTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/form_text_size" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/notesLayout"
                android:layout_below="@id/difficultyLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="wrap_content"
                    android:text="@string/exam_notes"
                    android:textSize="@dimen/form_text_size"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/notesTextView"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/form_text_size" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/gradeLayout"
                android:layout_below="@id/notesLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="wrap_content"
                    android:text="@string/exam_grade"
                    android:textSize="@dimen/form_text_size"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/examGrade"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="20dp"
                    android:textSize="@dimen/form_text_size" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <ListView android:layout_height="match_parent"
                android:layout_width="match_parent">

            </ListView>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="161dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />


</android.support.v4.widget.DrawerLayout>
